--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dr-kobros/react-webfont-loader": "^8.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
     "bootstrap": "^5.1.2",
     "konva": "^8.2.2",
+    "nanoid": "^3.1.29",
+    "nanoid-dictionary": "^4.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
