--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
     "bootstrap": "^5.1.2",
+    "canvas": "^2.8.0",
     "konva": "^8.2.2",
     "nanoid": "^3.1.29",
     "nanoid-dictionary": "^4.3.0",
@@ -43,6 +44,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(konva)/)"
     ]
   }
 }
